My first website

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f0f4f8;
-            color: #333;
+            background-color: #1e1e1e;
+            color: #f0f0f0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -19,10 +19,10 @@
         h1 {
             font-size: 2.5em;
             margin-bottom: 20px;
-            color: #2c3e50;
+            color: #61dafb;
         }
         .button {
-            background-color: #3498db;
+            background-color: #61dafb;
             border: none;
             color: white;
             padding: 15px 30px;
@@ -36,18 +36,18 @@
             transition: background-color 0.3s, transform 0.3s;
         }
         .button:hover {
-            background-color: #2980b9;
+            background-color: #21a1f1;
             transform: scale(1.05);
         }
         .number-display {
             font-size: 2em;
             margin-top: 20px;
             padding: 10px;
-            border: 2px solid #3498db;
+            border: 2px solid #61dafb;
             border-radius: 5px;
             display: inline-block;
             min-width: 100px;
-            background-color: white;
+            background-color: #2e2e2e;
         }
     </style>
 </head>
